--- a/src/index.css
+++ b/src/index.css
@@ -418,8 +418,8 @@ nav.open .links {
    text-decoration: none;
    background: transparent;
    padding: 0;
-   margin-top: 10px;
-   margin-top: 2px;
+   margin-left: 10px;
+   margin-top: 60px;
 
    font-size: inherit;
    font-family: inherit;
