--- a/src/index.css
+++ b/src/index.css
@@ -642,8 +642,51 @@ nav.open .links {
   background-color: var(--main-color);
   transition: 1s;
 }
-
-
+.skill-progress-frontend{
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  top: 0;
+  left: 0;
+  background-color: green;
+  transition: 1s;
+}
+.skill-progress-backend{
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  top: 0;
+  left: 0;
+  background-color: red;
+  transition: 1s;
+}
+.skill-progress-database{
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  top: 0;
+  left: 0;
+  background-color: orange;
+  transition: 1s;
+}
+.skill-progress-devops{
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  top: 0;
+  left: 0;
+  background-color: lightgreen;
+  transition: 1s;
+}
+.skill-progress-others{
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  top: 0;
+  left: 0;
+  background-color: blue;
+  transition: 1s;
+}
 /* Portfolio */
 #portfolio {
   background-color: var(--primary-color);
@@ -684,6 +727,13 @@ nav.open .links {
 .card {
     box-shadow: 0 0px 10px rgb(0 0 0 / 10%);
     border-radius: none;
+}
+.more-projects{
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .slick-slide {
   /* width: 100%!important; */
